# hft-engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  e2e.yml
gui/: CMakeLists.txt  main_window.cpp
gui/backend/: latency_model.cpp  latency_model.hpp  order_book_model.cpp  order_book_model.hpp  sweep_result_model.cpp  sweep_result_model.hpp
gui/qml/: LatencyChart.qml  Main.qml  OrderBookView.qml  PnLChart.qml  SweepResultsTable.qml
k8s/: entrypoint.sh  grafana-dashboard.json  kind-config-ci.yaml  kind-config.yaml  mpijob-ci.yaml  mpijob.yaml  prometheus-configmap.yaml  setup.sh
src/: main.cpp
src/backtest/: backtest_engine.cpp  backtest_engine.hpp  mpi_coordinator.cpp  mpi_coordinator.hpp  parameter_sweep.cpp  parameter_sweep.hpp
src/core/: matching_engine.cpp  matching_engine.hpp  order.hpp  order_book.cpp  order_book.hpp  spsc_queue.hpp
src/feed/: feed_simulator.cpp  feed_simulator.hpp  itch_parser.cpp  itch_parser.hpp
src/metrics/: latency_histogram.hpp  pnl_tracker.hpp  prometheus_server.hpp
src/strategy/: market_maker.cpp  market_maker.hpp  momentum.cpp  momentum.hpp  strategy_base.hpp
tests/: test_matching_engine.cpp  test_order_book.cpp  test_parameter_sweep.cpp  test_spsc_queue.cpp
